test news section in home page

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -1214,7 +1214,7 @@
           <!-- News Item 2 -->
           <div
             class="news-item"
-            data-pdf="https://drive.google.com/file/d/2def456/preview"
+            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
           >
             <div class="news-thumbnail">
               <img
@@ -1233,7 +1233,7 @@
           <!-- News Item 3 -->
           <div
             class="news-item"
-            data-pdf="https://drive.google.com/file/d/3ghi789/preview"
+            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
           >
             <div class="news-thumbnail">
               <img src="/images/news-thumbnail3.png" alt="Tin tức về sự kiện" />
@@ -1248,7 +1248,7 @@
           <!-- News Item 4 -->
           <div
             class="news-item"
-            data-pdf="https://drive.google.com/file/d/4jkl012/preview"
+            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
           >
             <div class="news-thumbnail">
               <img
