change pdf link from google drive to loca in home page

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -578,74 +578,61 @@
 
         <div class="news-grid">
           <!-- News Item 1 -->
-          <div
-            class="news-item"
-            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
-          >
+          <div class="news-item" data-pdf="./pdf/news-pdf1.pdf">
             <div class="news-thumbnail">
               <img
-                src="./images/news-thumbnail1.png"
+                src="./thumbnails/news-thumbnail1.png"
                 alt="Tin tức về hợp tác mới"
               />
               <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              Kỳ Long ký kết hợp tác chiến lược với đối tác Nhật Bản
+              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
           <!-- News Item 2 -->
-          <div
-            class="news-item"
-            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
-          >
+          <div class="news-item" data-pdf="./pdf/news-pdf2.pdf">
             <div class="news-thumbnail">
               <img
-                src="./images/news-thumbnail2.png"
+                src="./thumbnails/news-thumbnail2.png"
                 alt="Tin tức về công nghệ mới"
               />
-              <div class="news-date">15/02/2025</div>
+              <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              Kỳ Long ra mắt giải pháp tiết kiệm nhiên liệu mới cho ngành công
-              nghiệp
+              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
           <!-- News Item 3 -->
-          <div
-            class="news-item"
-            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
-          >
+          <div class="news-item" data-pdf="./pdf/news-pdf3.pdf">
             <div class="news-thumbnail">
               <img
-                src="./images/news-thumbnail3.png"
+                src="./thumbnails/news-thumbnail3.png"
                 alt="Tin tức về sự kiện"
               />
-              <div class="news-date">05/02/2025</div>
+              <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              Kỳ Long tham gia Hội chợ Triển lãm Công nghiệp 2025
+              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
           <!-- News Item 4 -->
-          <div
-            class="news-item"
-            data-pdf="https://docs.google.com/document/d/1UwyRgL2z0A8NDpbaqyUt-18F1J4tHIBhOehfHf1uqDA/preview"
-          >
+          <div class="news-item" data-pdf="./pdf/news-pdf4.pdf">
             <div class="news-thumbnail">
               <img
-                src="./images/news-thumbnail4.png"
+                src="./thumbnails/news-thumbnail4.png"
                 alt="Tin tức về chứng nhận"
               />
-              <div class="news-date">28/01/2025</div>
+              <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              Kỳ Long nhận chứng nhận ISO 14001 về hệ thống quản lý môi trường
+              TỔNG  QUAN  VỀ  DIỄN  BIẾN  GIÁ  KHÍ  LNG  TRONG  5 NĂM QUA
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
